--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Short+Stack&display=swap');
+      body {
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
+
     <title>Histori</title>
   </head>
   <body>
